; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_cmp_asn_test.c_set_up.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_cmp_asn_test.c_set_up.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i8* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.TYPE_5__* (i8*)* @set_up to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.TYPE_5__* @set_up(i8* %0) #0 {
  %2 = alloca %struct.TYPE_5__*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca %struct.TYPE_5__*, align 8
  store i8* %0, i8** %3, align 8
  %5 = call %struct.TYPE_5__* @OPENSSL_zalloc(i32 8)
  store %struct.TYPE_5__* %5, %struct.TYPE_5__** %4, align 8
  %6 = call i32 @TEST_ptr(%struct.TYPE_5__* %5)
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %9, label %8

8:                                                ; preds = %1
  store %struct.TYPE_5__* null, %struct.TYPE_5__** %2, align 8
  br label %14

9:                                                ; preds = %1
  %10 = load i8*, i8** %3, align 8
  %11 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %12 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %11, i32 0, i32 0
  store i8* %10, i8** %12, align 8
  %13 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  store %struct.TYPE_5__* %13, %struct.TYPE_5__** %2, align 8
  br label %14

14:                                               ; preds = %9, %8
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  ret %struct.TYPE_5__* %15
}

declare dso_local i32 @TEST_ptr(%struct.TYPE_5__*) #1

declare dso_local %struct.TYPE_5__* @OPENSSL_zalloc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
